--- a/pom.xml
+++ b/pom.xml
@@ -291,5 +291,12 @@
             <version>1.1.33</version>
             <scope>provided</scope>
         </dependency>
+        <!-- slimefun4 -->
+        <dependency>
+            <groupId>com.github.Slimefun</groupId>
+            <artifactId>Slimefun4</artifactId>
+            <version>RC-37</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 </project>
