--- a/pom.xml
+++ b/pom.xml
@@ -128,6 +128,11 @@
             <id>Artillex-Studios</id>
             <url>https://repo.artillex-studios.com/releases/</url>
         </repository>
+        <repository>
+            <id>fancyplugins-releases</id>
+            <name>FancyPlugins Repository</name>
+            <url>https://repo.fancyplugins.de/releases</url>
+        </repository>
     </repositories>
 
     <dependencyManagement>
@@ -296,6 +301,13 @@
             <groupId>org.popcraft</groupId>
             <artifactId>bolt-bukkit</artifactId>
             <version>1.1.33</version>
+            <scope>provided</scope>
+        </dependency>
+        <!-- FancyHolograms -->
+        <dependency>
+            <groupId>de.oliver</groupId>
+            <artifactId>FancyHolograms</artifactId>
+            <version>2.4.1</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
