--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -117,7 +117,7 @@ sell-command: true
 # Should players be able to right-click the drops to sell them
 hand-sell:
   enabled: true
-  # The interaction type RIGHT, LEFT, SHFT_CLICK, SHIFT_RIGHTCLICK, ALL
+  # The interaction type LEFT, SHIFT_LEFT, RIGHT, SHIFT_RIGHT
   interaction: RIGHT
 # Should we use permission to place specific generator?
 # The permission will be 'nextgens.generator.<id>'
