feat: tidying up the help menu

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -412,11 +412,12 @@ messages:
   help-normal:
     - '&6&lNextGens &7- by aglerr'
     - '&6/genshop &7- open up the generator shop gui.'
-    - '&6/upgradegens &7- open up a menu to help you upgrade your generators'
+    - '&6/upgradegens &7- open up the upgrade menu'
     - '&6/pickupgens &7- pickup all of your generators.'
     - '&6/repairgens &7- repair all of your generators.'
     - '&6/sell &7- sell your inventory contents'
     - '&6/itemworth &7- check the worth of the item that you hold'
+    - '&6/settings &7- open up the player settings menu'
     - '&6/gens view &7- view all of your generators in a gui'
     - '&6/gens trust add <player> &7- trust a player to access your gens'
     - '&6/gens trust remove <player> &7- untrust player from accessing your gens'
@@ -424,13 +425,16 @@ messages:
   help:
     - '&6&lNextGens &7- by aglerr'
     - '&6/genshop [player] &7- open up the generator shop gui'
+    - '&6/upgradegens &7- open up the upgrade menu'
     - '&6/pickupgens [player] &7- pickup all of specific player generators'
     - '&6/repairgens &7- repair all corrupted gens'
     - '&6/sell [player] &7- sell player''s inventory contents'
     - '&6/itemworth &7- get the worth of the item that you holding'
+    - '&6/settings &7- open up the player settings menu'
     - "&7"
     - '&6/gens give <player> <generator> <amount> &7- give generator to player'
-    - '&6/gens addmax/removemax <player> <amount> &7- add/remove bonus max generator'
+    - '&6/gens addmax <player> <amount> &7- add bonus max generator'
+    - '&6/gens removemax <player> <amount> &7- remove bonus max generator'
     - '&6/gens resetmax <player|all> &7- clear the bonus max generator'
     - '&6/gens repair <player|all> &7- repair broken generator for specific players or globally'
     - '&6/gens startevent <event> &7- force to start an event'
@@ -439,8 +443,9 @@ messages:
     - '&6/gens addmultiplier <player> <amount> &7- add multiplier amount'
     - '&6/gens removemultiplier <player> <amount> &7- decrease multiplier amount'
     - '&6/gens setmultiplier <player> <amount> &7- set multiplier amount'
-    - '&6/gens removeall <player> &7- remove all specific player generators'
-    - '&6/gens remove <player> &7- remove specific player from the member list'
-    - '&6/gens add <player> &7- add player to the member list'
-    - '&6/gens memberlist &7- list of all members'
+    - '&6/gens removegenerators <player> &7- remove all specific player generators'
+    - '&6/gens view [player] &7- view all players generators in a gui'
+    - '&6/gens trust add <player> &7- trust a player to access your gens'
+    - '&6/gens trust remove <player> &7- untrust player from accessing your gens'
+    - '&6/gens trust list &7- show the players that you trust'
     - '&6/gens reload &7- reload the configuration'
